Library/AXL(Library)/Visual Basic/AXDev.bas


Attribute VB_Name = "AXDev"



' Use Board Number and find Board Address
Public Declare Function AxlGetBoardAddress Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef upBoardAddress As Long) As Long
' Use Board Number and find Board ID
Public Declare Function AxlGetBoardID Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef upBoardID As Long) As Long
' Use Board Number and find Board Version
Public Declare Function AxlGetBoardVersion Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef upBoardVersion As Long) As Long
' Use Board Number/Module Position and find Module ID
Public Declare Function AxlGetModuleID Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModulePos As Long, ByRef upModuleID As Long) As Long
' Use Board Number/Module Position and find Module Version
Public Declare Function AxlGetModuleVersion Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModulePos As Long, ByRef upModuleVersion As Long) As Long

Public Declare Function AxlGetModuleNodeInfo Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModulePos As Long, ByRef upNetNo As Long, ByRef upNodeAddr As Long) As Long


' Only for PCI-R1604[RTEX]
' Writing user data to embedded flash memory
' lPageAddr(0 ~ 199)
' lByteNum(1 ~ 120)
' Note) Delay time is required for completing writing operation to Flash(Max. 17mSec)
Public Declare Function AxlSetDataFlash Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lPageAddr As Long, ByVal lBytesNum As Long, ByRef bpSetData As Byte) As Long


'ML3 Only, Use Board and Set the EStopInterLock Parameter
' dwInterLock    : (0) Not use(Default value)
'                  (1) Using function. When E-STOP signal is externally applied after setting function, E-STOP drive command is executed to the motion control node connected to the board.
' dwDigFilterVal : Setting range of input filter constant (1~40). Unit communication Cyclic time
' Set EstopInterLock function by using dwInterLock and dwDigFilterVal on Board
Public Declare Function AxlSetEStopInterLock Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwInterLock As Long, ByVal dwDigFilterVal As Long) As Long
' ML3 Only, Use Board and Get the EStopInterLock Parameter
Public Declare Function AxlGetEStopInterLock Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef dwInterLock As Long, ByRef dwDigFilterVal As Long) As Long
' ML3 Only, Read the External ESTOP Signal status
Public Declare Function AxlReadEStopInterLock Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef dwInterLock As Long) As Long


' Reading datas from embedded flash memory
' lPageAddr(0 ~ 199)
' lByteNum(1 ~ 120)
Public Declare Function AxlGetDataFlash Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lPageAddr As Long, ByVal lBytesNum As Long, ByRef bpGetData As Byte) As Long

' Use Board Number/Module Position and find AIO Module Number
Public Declare Function AxaInfoGetModuleNo Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModulePos As Long, ByRef lpModuleNo As Long) As Long
' Use Board Number/Module Position and find DIO Module Number
Public Declare Function AxdInfoGetModuleNo Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModulePos As Long, ByRef lpModuleNo As Long) As Long


' IPCOMMAND Setting at an appoint axis
Public Declare Function AxmSetCommand Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte) As Long
' 8bit IPCOMMAND Setting at an appoint axis
Public Declare Function AxmSetCommandData08 Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte, ByVal uData As Long) As Long
' Get 8bit IPCOMMAND at an appoint axis
Public Declare Function AxmGetCommandData08 Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte, ByRef upData As Long) As Long
' 16bit IPCOMMAND Setting at an appoint axis
Public Declare Function AxmSetCommandData16 Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte, ByVal uData As Long) As Long
' Get 16bit IPCOMMAND at an appoint axis
Public Declare Function AxmGetCommandData16 Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte, ByRef upData As Long) As Long
' 24bit IPCOMMAND Setting at an appoint axis
Public Declare Function AxmSetCommandData24 Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte, ByVal uData As Long) As Long
' Get 24bit IPCOMMAND at an appoint axis
Public Declare Function AxmGetCommandData24 Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte, ByRef upData As Long) As Long
' 32bit IPCOMMAND Setting at an appoint axis
Public Declare Function AxmSetCommandData32 Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte, ByVal uData As Long) As Long
' Get 32bit IPCOMMAND at an appoint axis
Public Declare Function AxmGetCommandData32 Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte, ByRef upData As Long) As Long


' QICOMMAND Setting at an appoint axis
Public Declare Function AxmSetCommandQi Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte) As Long
' 8bit QICOMMAND Setting at an appoint axis
Public Declare Function AxmSetCommandData08Qi Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte, ByVal uData As Long) As Long
' Get 8bit QICOMMAND at an appoint axis
Public Declare Function AxmGetCommandData08Qi Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte, ByRef upData As Long) As Long
' 16bit QICOMMAND Setting at an appoint axis
Public Declare Function AxmSetCommandData16Qi Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte, ByVal uData As Long) As Long
' Get 16bit QICOMMAND at an appoint axis
Public Declare Function AxmGetCommandData16Qi Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte, ByRef upData As Long) As Long
' 24bit QICOMMAND Setting at an appoint axis
Public Declare Function AxmSetCommandData24Qi Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte, ByVal uData As Long) As Long
' Get 24bit QICOMMAND at an appoint axis
Public Declare Function AxmGetCommandData24Qi Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte, ByRef upData As Long) As Long
' 32bit QICOMMAND Setting at an appoint axis
Public Declare Function AxmSetCommandData32Qi Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte, ByVal uData As Long) As Long
' Get 32bit QICOMMAND at an appoint axis
Public Declare Function AxmGetCommandData32Qi Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sCommand As Byte, ByRef upData As Long) As Long


' Get Port Data at an appoint axis - IP
Public Declare Function AxmGetPortData Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wOffset As Long, ByRef upData As Long) As Long
' Port Data Setting at an appoint axis - IP
Public Declare Function AxmSetPortData Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wOffset As Long, ByRef dwData As Long) As Long
' Get Port Data at an appoint axis - QI
Public Declare Function AxmGetPortDataQi Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wOffset As Long, ByRef upData As Long) As Long
' Port Data Setting at an appoint axis - QI
Public Declare Function AxmSetPortDataQi Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wOffset As Long, ByRef dwData As Long) As Long

' Set the script at an appoint axis.  - IP
' sc    : Script number (1 - 4)
' event : Define an event SCRCON to happen.
'         Set event, a number of axis, axis which the event happens, event content 1, 2 attribute
' cmd   : Define a selection SCRCMD however we change any content
' data  : Selection to change any Data.
Public Declare Function AxmSetScriptCaptionIp Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sc As Long, ByVal event1 As Long, ByVal data As Long) As Long
' Return the script at an appoint axis.  - IP
Public Declare Function AxmGetScriptCaptionIp Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sc As Long, ByRef event1 As Long, ByRef data As Long) As Long

' Set the script at an appoint axis.  - QI
' sc    : Script number (1 - 4)
' event : Define an event SCRCON to happen.
'         Set event, a number of axis, axis which the event happens, event content 1, 2 attribute
' cmd   : Define a selection SCRCMD however we change any content
' data  : Selection to change any Data.
Public Declare Function AxmSetScriptCaptionQi Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sc As Long, ByVal event1 As Long, ByVal cmd As Long, ByVal data As Long) As Long
' Return the script at an appoint axis. - QI
Public Declare Function AxmGetScriptCaptionQi Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal sc As Long, ByRef event1 As Long, ByRef cmd As Long, ByRef data As Long) As Long

' Clear orders a script inside Queue Index at an appoint axis
' uSelect IP.
' uSelect(0): Script Queue Index Clear.
'        (1): Caption Queue Index Clear.
' uSelect QI.
' uSelect(0): Script Queue 1 Index Clear.
'        (1): Script Queue 2 Index Clear.
Public Declare Function AxmSetScriptCaptionQueueClear Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uSelect As Long) As Long

' Return Index of a script inside Queue at an appoint axis.
' uSelect IP
' uSelect(0): Read Script Queue Index
'       (1): Read Caption Queue Index
' uSelect QI.
' uSelect(0): Read Script Queue 1 Index
'       (1): Read Script Queue 2 Index
Public Declare Function AxmGetScriptCaptionQueueCount Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef updata As Long, ByVal uSelect As Long) As Long

' Return Data number of a script inside Queue at an appoint axis.
' uSelect IP
' uSelect(0): Read Script Queue Data
'       (1): Read Caption Queue Data
' uSelect QI.
' uSelect(0): Read Script Queue 1 Data
'        (1): Read Script Queue 2 Data
Public Declare Function AxmGetScriptCaptionQueueDataCount Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef updata As Long, ByVal uSelect As Long) As Long

' Read an inside data.
Public Declare Function AxmGetOptimizeDriveData Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dMinVel As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByRef wRangeData As Long, ByRef wStartStopSpeedData As Long, ByRef wObjectSpeedData As Long, ByRef wAccelRate As Long, ByRef wDecelRate As Long) As Long



' Setting up confirmes the register besides within the board by Byte.
Public Declare Function AxmBoardWriteByte Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wOffset As Long, ByVal byData As Byte) As Long
Public Declare Function AxmBoardReadByte Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wOffset As Long, ByRef byData As Byte) As Long

' Setting up confirmes the register besides within the board by Word.
Public Declare Function AxmBoardWriteWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wOffset As Long, ByVal wData As Long) As Long
Public Declare Function AxmBoardReadWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wOffset As Long, ByRef wData As Long) As Long

' Setting up confirmes the register besides within the board by DWord.
Public Declare Function AxmBoardWriteDWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wOffset As Long, ByVal dwData As Long) As Long
Public Declare Function AxmBoardReadDWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wOffset As Long, ByRef dwData As Long) As Long


' Setting up confirmes the register besides within the Module by Byte.
Public Declare Function AxmModuleWriteByte Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModulePos As Long, ByVal wOffset As Long, ByVal byData As Byte) As Long
Public Declare Function AxmModuleReadByte Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModulePos As Long, ByVal wOffset As Long, ByRef byData As Byte) As Long


' Setting up confirmes the register besides within the Module by Word.
Public Declare Function AxmModuleWriteWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModulePos As Long, ByVal wOffset As Long, ByVal wData As Long) As Long
Public Declare Function AxmModuleReadWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModulePos As Long, ByVal wOffset As Long, ByRef wData As Long) As Long

